update for vercel deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend-ecommerce",
   "version": "1.0.0",
   "description": "Nodejs Test with Typescript enable",
-  "main": "app.ts",
+  "main": "index.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/app.js",
-    "dev": "nodemon app.ts",
+    "start": "node build/index.js",
+    "dev": "nodemon index.ts",
     "test": "mocha -r ts-node/register test/*.spec.ts",
     "lint": "gts lint",
     "clean": "gts clean",
